--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <div class="footer-copy-right">
           <p>
             ©2024 - <span class="copyright-date">2025</span> ,
-            suryakandipalli
+            surya
           </p>
         </div>
       </div>
